<resources>
    <string name="app_name">HealthyUs</string>
    <string name="txtSplash">Healthy Us</string>
    <string name="txtSplashCalorie">Track Your Calories</string>
    <string name="txtSplashDoctor">Interact with Doctors</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="txtLoginPage">Sign up to create your account</string>
    <string name="txtEmailAddress">Enter your email address</string>
    <string name="txtPassword">Enter your password</string>
    <string name="btnLogin">Login</string>
    <string name="txtHealthInfo">Include any diseases or allergies here</string>
    <string name="txtMedication">Write down your medication here</string>
    <string name="txtSignUpPageTitle">Health Condition Information</string>
    <string name="txtEmailIdCreate">Enter your Email id</string>
    <string name="txtPasswordCreate">Enter Password</string>
    <string name="btnRegister">Register</string>
    <string name="radFoodTracker">Food Tracker</string>
    <string name="radFindADoctor">Find A Doctor</string>
    <string name="btnGo">Go</string>
    <string name="txtFoodTrackerTitle">Food Tracker</string>
    <string name="txtFoodEntries">Enter your food items</string>
    <string name="numCalories">Enter your calories</string>
    <string name="btnCalorieDisplay">Submit</string>
    <string name="txtResult">Result</string>
    <string name="txtWarning">Enter values</string>
    <string name="txtAddress">Enter Postal Code</string>
    <string name="hint1">Enter Postal Code</string>
    <string name="btnSubmit">Submit</string>
    <string name="txtFullName">Enter Full Name</string>
    <string name="txtUserEmail">Enter Email</string>
    <string name="btnDirectToSignIn">Sign In</string>
    <string name="find_doctor">Find Doctor</string>
    <string name="listDoctors">Doctors List</string>
    <string name="txtDate">Enter Today Date</string>
    <string name="btnHealthyRecipe">Click to get Healthy Recipe</string>
    <string name="txtEnterPostalCode">Enter Postal Code</string>
    <string name="btnFindDoctor">Find Doctor</string>
    <string name="listDoctor">Doctors list</string>
    <string name="txtDoctorsList">Doctors List</string>
    <string name="text">an image</string>
    <string name="txt">image1</string>
    <string name="txtAppointmentTitle">Book Appoinment</string>
    <string name="txtAppointmentName">Enter your Name</string>
    <string name="txtAppointmentEmail">Enter your Email</string>
    <string name="txtAppointmentDoctorName">Enter Doctor Name</string>
    <string name="txtAppointmentDateTime">Enter Date and Time</string>
    <string name="btnAppointmentSubmit">Book Appointment</string>
    <string name="btnAppointmentGetOnlineHelp">Get Online Help</string>
    <string name="txtAppointmentResult">result</string>
    <string name="txtOnlineHelptitle">Online Help</string>
    <string name="txtOnlineHelpUserEmail">Enter your Email</string>
    <string name="txtOnlineHelpDoctorName">Enter Doctor Name</string>
    <string name="txtOnlineHelpComplaints">Enter your Complaints</string>
    <string name="rdOnlineHelpWithMsp">Select if you have MSP</string>
    <string name="rdOnlineHelpWithNoMsp">Select if no  MSP</string>
    <string name="btnOnlineHelpSubmit">Submit</string>
    <string name="txtLogout">Logout</string>
    <string name="txtOnlineHelpBill">result</string>
    <string name="txtCheckAvailability">Back To Doctor Availability</string>
    <string name="txtDoctorSignupTitle">Doctor Sign Up</string>
    <string name="txtDoctorName">Enter your Name</string>
    <string name="txtDoctorPostalCode">Enter Postal Code</string>
    <string name="txtDoctorEmail">Enter Email</string>
    <string name="txtAvailabilityDays">Enter Availability Days</string>
    <string name="txtDoctorAvailTime">Enter Timings</string>
    <string name="btnDoctorSignUp">Sign Up</string>
</resources>