<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appointment_page">

    <TextView
        android:id="@+id/txtAppointmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="96dp"
        android:text="@string/txtAppointmentTitle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAppoinmentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="112dp"
        android:ems="10"
        android:hint="@string/txtAppointmentName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppointmentTitle"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtAppointmentEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="112dp"
        android:ems="10"
        android:hint="@string/txtAppointmentEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppoinmentName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtAppointmentDoctorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="112dp"
        android:ems="10"
        android:hint="@string/txtAppointmentDoctorName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppointmentEmail"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtAppointmentDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="112dp"
        android:ems="10"
        android:hint="@string/txtAppointmentDateTime"
        android:inputType="date|datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppointmentDoctorName"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnAppointmentSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="140dp"
        android:text="@string/btnAppointmentSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppointmentTitle" />

    <Button
        android:id="@+id/btnAppointmentGetOnlineHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="152dp"
        android:text="@string/btnAppointmentGetOnlineHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAppointmentSubmit" />

    <TextView
        android:id="@+id/txtLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="196dp"
        android:text="@string/txtLogout"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAppointmentGetOnlineHelp" />

    <TextView
        android:id="@+id/txtCheckAvailability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="72dp"
        android:text="@string/txtCheckAvailability"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogout" />

</androidx.constraintlayout.widget.ConstraintLayout>