<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPage">

    <EditText
        android:id="@+id/txtHealthInfo"
        android:layout_width="339dp"
        android:layout_height="65dp"
        android:layout_marginTop="148dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtHealthInfo"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtMedication"
        android:layout_width="338dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtMedication"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHealthInfo" />

    <TextView
        android:id="@+id/txtSignUpPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/txtSignUpPageTitle"
        android:textColor="#FF9800"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/btnRegister"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="345dp"
        android:layout_height="58dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtAddress"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordCreate" />

    <EditText
        android:id="@+id/txtFullName"
        android:layout_width="336dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtFullName"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpPageTitle" />

    <Button
        android:id="@+id/btnDirectToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="27dp"
        android:text="@string/btnDirectToSignIn"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtEmailIdCreate"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtEmailIdCreate"
        android:inputType="textWebEmailAddress|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMedication" />

    <EditText
        android:id="@+id/txtPasswordCreate"
        android:layout_width="329dp"
        android:layout_height="43dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="39dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtPasswordCreate"
        android:inputType="textAutoCorrect|textPassword|numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailIdCreate" />

</androidx.constraintlayout.widget.ConstraintLayout>