<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodTracker">

    <EditText
        android:id="@+id/txtFoodEntries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtFoodEntries"
        android:inputType="textMultiLine"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFoodTrackerTitle" />

    <EditText
        android:id="@+id/numCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/numCalories"
        android:inputType="numberDecimal"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFoodEntries"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="225dp"
        android:layout_height="38dp"
        android:layout_marginTop="484dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalorieDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/btnCalorieDisplay"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numCalories" />

    <TextView
        android:id="@+id/txtFoodTrackerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:text="@string/txtFoodTrackerTitle"
        android:textColor="#FF9800"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUserEmail"
        android:layout_width="299dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtUserEmail"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numCalories" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="293dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/txtDate"
        android:inputType="date|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserEmail"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnHealthyRecipe"
        android:layout_width="273dp"
        android:layout_height="58dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="68dp"
        android:text="@string/btnHealthyRecipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalorieDisplay" />

    <TextView
        android:id="@+id/txtLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="168dp"
        android:text="@string/txtLogout"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHealthyRecipe" />

</androidx.constraintlayout.widget.ConstraintLayout>