<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".find_Doctor">

    <EditText
        android:id="@+id/txtEnterPostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="110dp"
        android:ems="10"
        android:hint="@string/txtEnterPostalCode"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/find_doctor"
        android:layout_width="259dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/find_doctor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="172dp"
        android:text="@string/btnFindDoctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnterPostalCode" />

    <ListView
        android:id="@+id/list_Doctor"
        android:layout_width="390dp"
        android:layout_height="350dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFind" />
</androidx.constraintlayout.widget.ConstraintLayout>